Add listing form upload image tool should not upload non-image files - FIXED
Added wp_filesystem checks for systems having problems with import/export - ADDED
Genesis theme update shows menu below top widget area - FIXED
Added filter to be able to stop add listing address from changing when moving map pin - ADDED
Better seo title and description for search results - CHANGED

v1.4.7
Search not working for empty keyword search - FIXED
Review counts lost during virtual page conversion (alos fixed by saving any place) - FIXED
Option added to allow/restrict some file types for custom field file upload - ADDED
Some DocBlocks added for documentation - ADDED

v1.4.6
New filter added for term link in popular category widget - ADDED
Validation added to avoid multiple times selection for same category - FIXED
Map ajax requests now specifically set to return utf-8 - CHANGED
Star ratings in sidebar not responsive for window size between 883x738 & 982x738 - FIXED
New filter added for location terms - ADDED
Searching function updated to find results for only matching whole words - FIXED
On sorting comment the comment text goes disappeared - FIXED
Import & Export added for GD listings & categories - ADDED
CSV Upload updated & moved under Import & Export - CHANGED
GD pages converted from virtual to normal pages - CHANGED
GD pages section added to GD permalinks page - ADDED

v1.4.5
Slider JS missing from preview page - FIXED
http://docs.wpgeodirectory.com/security-release-21-04-2015/ - SECURITY UPDATE

v1.4.4
In CSV upload file new column post_status added to set listing status - CHANGED
term description sometimes not showing - FIXED
Listing title displaying sanitized for title attribute - ADDED
CSV upload not dealing with line breaks in fields - FIXED
ADDRESS_MSG can't be translated because it contains HTML tags - FIXED
CSS files minified and added to one file for frontend - CHANGED
JS files minified for the frontend - CHANGED