@@ -5,6 +5,7 @@ Added wp_filesystem checks for systems having problems with import/export - ADDE
 Genesis theme update shows menu below top widget area - FIXED
 Added filter to be able to stop add listing address from changing when moving map pin - ADDED
 Better seo title and description for search results - CHANGED
+Without filling mandatory fields click on save draft button keeps spinning - FIXED
 
 v1.4.7
 Search not working for empty keyword search - FIXED
